--- a/project.ipynb
+++ b/project.ipynb
@@ -1587,7 +1587,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the information from above, let's try to predict stock prices. "
+    "With the information from above, let's try to predict stock prices using PyTorch."
    ]
   },
   {
